# Projekt---PR

./: CMakeLists.txt  cuda.cu  opencl.cpp  openmp.cpp  sekwencyjny.cpp
